[gd_scene load_steps=10 format=3 uid="uid://ngxc7rinvbsh"]

[ext_resource type="Script" path="res://Scenes/MainMenu/Workspace.gd" id="2_0gcro"]
[ext_resource type="Script" path="res://Scenes/MainMenu/Root.gd" id="2_0w3ln"]
[ext_resource type="Theme" uid="uid://ltfmta4yx5om" path="res://Resources/Themes/GeneralTheme.tres" id="2_o6g30"]
[ext_resource type="PackedScene" uid="uid://b6alv8yqm6hw0" path="res://Resources/UIElements/ComplexityLevel/ComplexityLevel.tscn" id="3_hyeud"]
[ext_resource type="PackedScene" path="res://Resources/UIElements/SideBar/SideBar.tscn" id="4_koi1d"]
[ext_resource type="PackedScene" uid="uid://ct0mmil2w588m" path="res://Resources/UIElements/ValuesLabel/ValuesLabel.tscn" id="5_ivg05"]
[ext_resource type="PackedScene" uid="uid://ycq5i24mo4s3" path="res://Resources/UIElements/ChordView/ChordView.tscn" id="7_fslaq"]
[ext_resource type="Script" path="res://Scenes/MainMenu/AudioGraphicLayer.gd" id="7_hhhp4"]
[ext_resource type="PackedScene" uid="uid://ct1ns8kym7ejy" path="res://Resources/Interfaces/AudioAnalyzeInterface.tscn" id="7_q7x4o"]

[node name="Root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_0w3ln")
metadata/_edit_vertical_guides_ = []
metadata/_edit_horizontal_guides_ = []

[node name="Workspace" type="Panel" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_o6g30")
script = ExtResource("2_0gcro")
sidebar_swiftness = 0.5

[node name="ComplexityLevel" parent="Workspace" instance=ExtResource("3_hyeud")]
layout_mode = 1
offset_left = -1.33514e-05

[node name="HSeparator" type="HSeparator" parent="Workspace"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.07
anchor_top = 0.68
anchor_right = 0.93
anchor_bottom = 0.76
offset_top = 1.66893e-05
offset_right = -3.8147e-05
offset_bottom = 4.0
metadata/_edit_use_anchors_ = true

[node name="RankHistoryButton" type="Button" parent="Workspace"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.838542
anchor_top = 0.0453704
anchor_right = 0.955542
anchor_bottom = 0.106481
theme_override_font_sizes/font_size = 25
text = "RANK HISTORY"
metadata/_edit_use_anchors_ = true

[node name="SideBar" parent="Workspace" instance=ExtResource("4_koi1d")]
layout_mode = 1

[node name="StartButton" type="Button" parent="Workspace"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.563889
anchor_right = 0.6
anchor_bottom = 0.665
theme_override_font_sizes/font_size = 36
text = "START"
metadata/_edit_use_anchors_ = true

[node name="ToNextButton" type="Button" parent="Workspace"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.722917
anchor_top = 0.563889
anchor_right = 0.922917
anchor_bottom = 0.665
theme_override_font_sizes/font_size = 36
text = "TO CHORDS"
metadata/_edit_use_anchors_ = true

[node name="CurrentKey" type="Label" parent="Workspace"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.416
anchor_top = 0.595
anchor_right = 0.5
anchor_bottom = 0.595
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 35
text = "Current key:"
metadata/_edit_use_anchors_ = true

[node name="FinishButton" type="Button" parent="Workspace"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0760417
anchor_top = 0.563889
anchor_right = 0.276042
anchor_bottom = 0.665
theme_override_font_sizes/font_size = 36
text = "FINISH
"
metadata/_edit_use_anchors_ = true

[node name="ValuesLabel" parent="Workspace" instance=ExtResource("5_ivg05")]
visible = false
layout_mode = 1

[node name="ChordView" parent="Workspace" instance=ExtResource("7_fslaq")]
visible = false
layout_mode = 1
mouse_filter = 2

[node name="AudioGraphicLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("7_hhhp4")

[node name="VolumeMeter" type="ProgressBar" parent="AudioGraphicLayer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0161458
anchor_top = 0.575
anchor_right = 0.0567708
anchor_bottom = 0.937037
min_value = -89.0
max_value = 2.08165e-12
fill_mode = 3
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="AudioGraphicLayer/VolumeMeter"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.891
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 26.0
theme_override_font_sizes/font_size = 30
text = "50 db"
metadata/_edit_use_anchors_ = true

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.04375
anchor_top = 0.0453704
anchor_right = 0.139646
anchor_bottom = 0.106481
theme_override_font_sizes/font_size = 25
text = "SETTINGS"
metadata/_edit_use_anchors_ = true

[node name="AudioAnalyzeInterface" parent="." instance=ExtResource("7_q7x4o")]
